// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Guage renders 1`] = `
<Memo(StackedBarChartControl)
  data={
    Object {
      "chartData": Array [
        Object {
          "color": "#e3008c",
          "data": 20,
          "legend": "Item 1",
          "xAxisCalloutData": undefined,
        },
        Object {
          "color": "#13a10e",
          "data": 20,
          "legend": "Item 1",
          "xAxisCalloutData": undefined,
        },
      ],
      "chartDataAccessibilityData": Object {
        "ariaLabel": "",
      },
      "chartTitle": "",
    }
  }
  styles={
    Object {
      "root": Object {
        "width": -1,
      },
    }
  }
  themeJSON=""
  width={-1}
/>
`;

exports[`Guage renders dummy items when no items configured 1`] = `
<Memo(StackedBarChartControl)
  data={
    Object {
      "chartData": Array [
        Object {
          "color": "#57811b",
          "data": 100,
          "legend": "Item 1",
          "xAxisCalloutData": "1",
        },
        Object {
          "color": "#026467",
          "data": 200,
          "legend": "Item 2",
          "xAxisCalloutData": "2",
        },
        Object {
          "color": "#9a3d0c",
          "data": 300,
          "legend": "Item 3",
          "xAxisCalloutData": "3",
        },
      ],
      "chartTitle": "StackChart",
    }
  }
  styles={
    Object {
      "root": Object {
        "width": -1,
      },
    }
  }
  themeJSON=""
  width={-1}
/>
`;
